--- a/server/src/index.css
+++ b/server/src/index.css
@@ -1,5 +1,37 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    width: 100%;
+    /*background: url("img/body_bg.jpg ") no-repeat;*/
+    /*background-size: cover;*/
+}
+
+
+.content {
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.container-fluid {
+    margin-top: 0px;
+    padding: 0px;
+}
+
+.row {
+    width: 100%;
+    margin: 0px;
+}
+
+.col-sm-6 {
+    padding: 0px;
+}
+
+.jumbotron {
+    background-color: transparent !important;
+}
+
+.cmn-btn{
+    margin: 54% 42% 42% 42%;
 }
